--- a/webroot/css/intellident.css
+++ b/webroot/css/intellident.css
@@ -228,6 +228,13 @@ embed { width: 100%; height: 500px; }
   position: relative;
 }
 
+.external-event-2 {
+  border-radius: 0 0 3px 3px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  padding: 5px 10px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
 
 @media only screen and (max-width:767px) {
   .color-result { margin:0 auto 20px; }
