--- a/webroot/css/intellident.css
+++ b/webroot/css/intellident.css
@@ -235,6 +235,9 @@ embed { width: 100%; height: 500px; }
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
+.small-box.default-box {border: 2px solid #ccc;}
+.small-box.default-box:hover { color:#000;}
+
 
 @media only screen and (max-width:767px) {
   .color-result { margin:0 auto 20px; }
